--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Projeto 2 - CDados\n",
+    "\n",
+    "### Autores: Diego Guimarães Nuñez, Felipe Bakowski Nantes de Souza, Gustavo de Lima Mota\n",
+    "\n",
+    "### Tema: Conseguimos prever o número de homicídios da cidade de São Paulo por ano?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,7 +25,7 @@
     }
    ],
    "source": [
-    "import basedosdados as bd\n",
+    "import basedoasdados as bd\n",
     "\n",
     "# Para carregar o dado direto no pandas\n",
     "pnadc = bd.read_table(dataset_id='br_ibge_pnadc',\n",
