--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "### Autores: Diego Guimarães Nuñez, Felipe Bakowski Nantes de Souza, Gustavo de Lima Mota\n",
     "\n",
-    "### Tema: Conseguimos prever o número de homicídios da cidade de São Paulo por ano?"
+    "### Tema: Conseguimos prever o número de homicídios da cidade de São Paulo por ano?\n",
+    "\n",
+    "### Features: PIB de São Paulo, Índice do Custo de Vida (ICV), Escolaridade, Tráfico de Drogas e Desemprego."
    ]
   },
   {
