--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 913/913 [00:01<00:00, 602.09rows/s]\n"
+      "Downloading: 100%|██████████| 913/913 [00:00<00:00, 2007.89rows/s]\n"
      ]
     }
    ],
@@ -17,9 +17,9 @@
     "import basedosdados as bd\n",
     "\n",
     "# Para carregar o dado direto no pandas\n",
-    "pnadc = bd.read_table(dataset_id='br_ibge_pnadc',\n",
+    "df = bd.read_table(dataset_id='br_ibge_pnadc',\n",
     "table_id='dicionario',\n",
-    "billing_project_id=\"cdadosp2-404421\")"
+    "billing_project_id=\"cdadosp2-404421\") "
    ]
   },
   {
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "pnadc"
+    "df"
    ]
   },
   {
