--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "import basedoasdados as bd\n",
+    "import basedosdados as bd\n",
     "\n",
     "# Para carregar o dado direto no pandas\n",
     "df = bd.read_table(dataset_id='br_ibge_pnadc',\n",
@@ -206,7 +206,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Para carregar o dado direto no pandas\n",
+    "df = bd.read_table(dataset_id='br_inep_saeb',\n",
+    "table_id='municipio',\n",
+    "billing_project_id=\"<YOUR_PROJECT_ID>\")"
+   ]
   }
  ],
  "metadata": {
