--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "inep"
+    "inep # escolaridade por níveis (feature)"
    ]
   },
   {
@@ -823,6 +823,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_municipio</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>pib</th>\n",
+       "      <th>impostos_liquidos</th>\n",
+       "      <th>va</th>\n",
+       "      <th>va_agropecuaria</th>\n",
+       "      <th>va_industria</th>\n",
+       "      <th>va_servicos</th>\n",
+       "      <th>va_adespss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>104089</th>\n",
+       "      <td>3550308</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>748759007000</td>\n",
+       "      <td>124349146000</td>\n",
+       "      <td>624409861000</td>\n",
+       "      <td>61896000</td>\n",
+       "      <td>58077784000</td>\n",
+       "      <td>520357969000</td>\n",
+       "      <td>45912212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104090</th>\n",
+       "      <td>3550407</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>817487000</td>\n",
+       "      <td>64506000</td>\n",
+       "      <td>752981000</td>\n",
+       "      <td>56762000</td>\n",
+       "      <td>60600000</td>\n",
+       "      <td>478812000</td>\n",
+       "      <td>156807000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104091</th>\n",
+       "      <td>3550506</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>235066000</td>\n",
+       "      <td>12013000</td>\n",
+       "      <td>223053000</td>\n",
+       "      <td>95993000</td>\n",
+       "      <td>23761000</td>\n",
+       "      <td>62136000</td>\n",
+       "      <td>41164000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104092</th>\n",
+       "      <td>3550605</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3108224000</td>\n",
+       "      <td>370465000</td>\n",
+       "      <td>2737759000</td>\n",
+       "      <td>47545000</td>\n",
+       "      <td>556806000</td>\n",
+       "      <td>1754878000</td>\n",
+       "      <td>378530000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_municipio   ano           pib  impostos_liquidos            va  \\\n",
+       "104089      3550308  2020  748759007000       124349146000  624409861000   \n",
+       "104090      3550407  2020     817487000           64506000     752981000   \n",
+       "104091      3550506  2020     235066000           12013000     223053000   \n",
+       "104092      3550605  2020    3108224000          370465000    2737759000   \n",
+       "\n",
+       "        va_agropecuaria  va_industria   va_servicos   va_adespss  \n",
+       "104089         61896000   58077784000  520357969000  45912212000  \n",
+       "104090         56762000      60600000     478812000    156807000  \n",
+       "104091         95993000      23761000      62136000     41164000  \n",
+       "104092         47545000     556806000    1754878000    378530000  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pib[104089:104093] # pib de são paulo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -842,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1227,13 +1340,13 @@
        "57  2017        4.406750"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "icv"
+    "icv # traz informações sobre feature de variação anual do índice de custo de vida."
    ]
   },
   {
@@ -1693,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2086,13 +2199,13 @@
        "[10 rows x 27 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homicidio[1000:1010]"
+    "homicidio[1000:1010] # coluna homicidio_doloso traz informações do target"
    ]
   }
  ],
