--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -2749,7 +2749,8 @@
     }
    ],
    "source": [
-    "ivs # colunas que serão usadas para feature: \"ivs\", \"ivs_infraestrutura_urbana\", \"ivs_capital_humano\" e \"ivs_renda_trabalho\""
+    "ivs # colunas que serão usadas para feature: \"ivs\", \"ivs_infraestrutura_urbana\", \"ivs_capital_humano\" e \"ivs_renda_trabalho\"\n",
+    "# índice de vulnerabilidade social."
    ]
   }
  ],
