--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -24,18 +24,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baixando as bases de dados utilizadas no projeto:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Para carregar o dado direto no pandas\n",
+    "# Baixando dados desemprego\n",
     "desemprego = pd.read_excel(\"20231108182418.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -254,13 +261,15 @@
        "[5 rows x 141 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "desemprego #nesse df observa-se a taxa de desocupação (%) da população brasileira ao longo dos anos (2012-2022)"
+    "desemprego \n",
+    "# base de dados de desemprego\n",
+    "# nesse df observa-se a taxa de desocupação (%) da população brasileira ao longo dos anos (2012-2022)"
    ]
   },
   {
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -633,13 +642,13 @@
        "[1726300 rows x 19 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inep # escolaridade por níveis (feature)"
+    "inep # base de dados de níveis de escolaridade"
    ]
   },
   {
@@ -663,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -866,126 +875,13 @@
        "[105830 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_municipio</th>\n",
-       "      <th>ano</th>\n",
-       "      <th>pib</th>\n",
-       "      <th>impostos_liquidos</th>\n",
-       "      <th>va</th>\n",
-       "      <th>va_agropecuaria</th>\n",
-       "      <th>va_industria</th>\n",
-       "      <th>va_servicos</th>\n",
-       "      <th>va_adespss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>104089</th>\n",
-       "      <td>3550308</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>748759007000</td>\n",
-       "      <td>124349146000</td>\n",
-       "      <td>624409861000</td>\n",
-       "      <td>61896000</td>\n",
-       "      <td>58077784000</td>\n",
-       "      <td>520357969000</td>\n",
-       "      <td>45912212000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104090</th>\n",
-       "      <td>3550407</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>817487000</td>\n",
-       "      <td>64506000</td>\n",
-       "      <td>752981000</td>\n",
-       "      <td>56762000</td>\n",
-       "      <td>60600000</td>\n",
-       "      <td>478812000</td>\n",
-       "      <td>156807000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104091</th>\n",
-       "      <td>3550506</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>235066000</td>\n",
-       "      <td>12013000</td>\n",
-       "      <td>223053000</td>\n",
-       "      <td>95993000</td>\n",
-       "      <td>23761000</td>\n",
-       "      <td>62136000</td>\n",
-       "      <td>41164000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104092</th>\n",
-       "      <td>3550605</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3108224000</td>\n",
-       "      <td>370465000</td>\n",
-       "      <td>2737759000</td>\n",
-       "      <td>47545000</td>\n",
-       "      <td>556806000</td>\n",
-       "      <td>1754878000</td>\n",
-       "      <td>378530000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id_municipio   ano           pib  impostos_liquidos            va  \\\n",
-       "104089      3550308  2020  748759007000       124349146000  624409861000   \n",
-       "104090      3550407  2020     817487000           64506000     752981000   \n",
-       "104091      3550506  2020     235066000           12013000     223053000   \n",
-       "104092      3550605  2020    3108224000          370465000    2737759000   \n",
-       "\n",
-       "        va_agropecuaria  va_industria   va_servicos   va_adespss  \n",
-       "104089         61896000   58077784000  520357969000  45912212000  \n",
-       "104090         56762000      60600000     478812000    156807000  \n",
-       "104091         95993000      23761000      62136000     41164000  \n",
-       "104092         47545000     556806000    1754878000    378530000  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pib[104089:104093] # pib de são paulo"
+    "pib # base de dados dos pib´s por município do Brasil por ano"
    ]
   },
   {
@@ -1009,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1394,25 +1290,25 @@
        "57  2017        4.406750"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "icv # traz informações sobre feature de variação anual do índice de custo de vida."
+    "icv # base de dados sobre a feature de variação anual do índice de custo de vida."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 153876/153876 [00:28<00:00, 5386.34rows/s]\n"
+      "Downloading: 100%|██████████| 153876/153876 [00:28<00:00, 5375.26rows/s]\n"
      ]
     }
    ],
@@ -1423,24 +1319,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Para esse projeto decidimos fazer uma modelagem do número de homicidios em SP e tentar prever como esse evento atua em função de 5 features distintas. As quais são : Desemprego, nível de escolaridade, PIB, custo de vida (ICV) e o índice de vulnerabilidade social (IVC)\n",
-    "\n",
-    "### A meta é conseguir criar um modelo satisfatório para e validá-lo com dados reais, a fim de, termos uma ideia melhor de como a criminalidade cresce no Brasil e tomarmos medidas para nos proteger"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Primeiramente, vamos tratar a base de dados de homicidios e deixá-la mais visualizável"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1745,7 @@
        "[153876 rows x 27 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1875,19 +1755,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "homicidio = homicidio.loc[:,('ano', 'mes', 'regiao_ssp', 'homicidio_doloso', 'homicidio_culposo_outros')] #selecionando colunas\n",
-    "homicidio['Homicidio_total'] = homicidio.loc[:, ['homicidio_doloso', 'homicidio_culposo_outros']].sum(axis=1) #homicidio total\n",
-    "homicidio = homicidio.loc[:,('ano', 'mes', 'regiao_ssp', 'Homicidio_total')] #selecionando colunas"
+    "## Para esse projeto decidimos fazer uma modelagem do número de homicidios em SP e tentar prever como esse evento atua em função de 5 features distintas. As quais são : Desemprego, nível de escolaridade, PIB, custo de vida (ICV) e o índice de vulnerabilidade social (IVC)\n",
+    "\n",
+    "### A meta é conseguir criar um modelo satisfatório para e validá-lo com dados reais, a fim de, termos uma ideia melhor de como a criminalidade cresce no Brasil e tomarmos medidas para nos proteger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Primeiramente, vamos tratar a base de dados de homicidios e deixá-la mais visualizável"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homicidio_colunas = homicidio.loc[:,('ano', 'mes', 'regiao_ssp', 'homicidio_doloso', 'homicidio_culposo_outros')] #selecionando colunas\n",
+    "homicidio['Homicidio_total'] = homicidio.loc[:, ['homicidio_doloso', 'homicidio_culposo_outros']].sum(axis=1) #homicidio total\n",
+    "homicidio_filtrado = homicidio.loc[:,('ano', 'mes', 'regiao_ssp', 'Homicidio_total')] #selecionando colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2017,13 +1913,13 @@
        "[153876 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homicidio"
+    "homicidio_filtrado"
    ]
   },
   {
@@ -2035,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,12 +1949,12 @@
     "for i in range(len(datas)):\n",
     "    if i > 1:\n",
     "        dados[datas[i]] = valores[i]\n",
-    "desemprego = (pd.DataFrame(dados, index=['%']))"
+    "desemprego_tratado = (pd.DataFrame(dados, index=['%']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2154,13 +2050,13 @@
        "[1 rows x 139 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "desemprego"
+    "desemprego_tratado"
    ]
   },
   {
@@ -2186,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2316,13 +2212,13 @@
        "[23028 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homicidio_2012 = homicidio.loc[homicidio['ano'].isin([2012,2013,2014])]\n",
+    "homicidio_2012 = homicidio_filtrado.loc[homicidio['ano'].isin([2012,2013,2014])]\n",
     "homicidio_2012"
    ]
   },
@@ -2335,20 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dados = {}\n",
-    "for k,v in desemprego.items():\n",
-    "    if '2012' in k or '2013' in k or '2014' in k:\n",
-    "        dados[k] = v\n",
-    "desemprego_2012 = pd.DataFrame(dados, index=['%'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2444,12 +2327,17 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "dados = {}\n",
+    "for k,v in desemprego_tratado.items():\n",
+    "    if '2012' in k or '2013' in k or '2014' in k:\n",
+    "        dados[k] = v\n",
+    "desemprego_2012 = pd.DataFrame(dados, index=['%'])\n",
     "desemprego_2012"
    ]
   },
