criando tabela universal

--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -1946,9 +1946,9 @@
    "outputs": [],
    "source": [
     "dados = {}\n",
-    "for i in range(len(datas)):\n",
-    "    if i > 1:\n",
-    "        dados[datas[i]] = valores[i]\n",
+    "for mes in range(len(datas)):\n",
+    "    if mes > 1:\n",
+    "        dados[datas[mes]] = valores[mes]\n",
     "desemprego_tratado = (pd.DataFrame(dados, index=['%']))"
    ]
   },
@@ -2339,6 +2339,612 @@
     "        dados[k] = v\n",
     "desemprego_2012 = pd.DataFrame(dados, index=['%'])\n",
     "desemprego_2012"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Então, criaremos um df com as features e target como colunas e as datas como indices de linhas, para que, consigamos realizar uma análise quantitativa "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jan-fev-mar 2012</td>\n",
+       "      <td>8,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fev-mar-abr 2012</td>\n",
+       "      <td>7,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mar-abr-mai 2012</td>\n",
+       "      <td>7,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>abr-mai-jun 2012</td>\n",
+       "      <td>7,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mai-jun-jul 2012</td>\n",
+       "      <td>7,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>jun-jul-ago 2012</td>\n",
+       "      <td>7,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>jul-ago-set 2012</td>\n",
+       "      <td>7,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ago-set-out 2012</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>set-out-nov 2012</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>out-nov-dez 2012</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>nov-dez-jan 2013</td>\n",
+       "      <td>7,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>dez-jan-fev 2013</td>\n",
+       "      <td>7,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>jan-fev-mar 2013</td>\n",
+       "      <td>8,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>fev-mar-abr 2013</td>\n",
+       "      <td>7,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>mar-abr-mai 2013</td>\n",
+       "      <td>7,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>abr-mai-jun 2013</td>\n",
+       "      <td>7,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>mai-jun-jul 2013</td>\n",
+       "      <td>7,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>jun-jul-ago 2013</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>jul-ago-set 2013</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>ago-set-out 2013</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>set-out-nov 2013</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>out-nov-dez 2013</td>\n",
+       "      <td>6,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>nov-dez-jan 2014</td>\n",
+       "      <td>6,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>dez-jan-fev 2014</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>jan-fev-mar 2014</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>fev-mar-abr 2014</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>mar-abr-mai 2014</td>\n",
+       "      <td>7,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>abr-mai-jun 2014</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>mai-jun-jul 2014</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>jun-jul-ago 2014</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>jul-ago-set 2014</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>ago-set-out 2014</td>\n",
+       "      <td>6,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>set-out-nov 2014</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>out-nov-dez 2014</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               index    %\n",
+       "0   jan-fev-mar 2012  8,0\n",
+       "1   fev-mar-abr 2012  7,8\n",
+       "2   mar-abr-mai 2012  7,7\n",
+       "3   abr-mai-jun 2012  7,6\n",
+       "4   mai-jun-jul 2012  7,5\n",
+       "5   jun-jul-ago 2012  7,4\n",
+       "6   jul-ago-set 2012  7,1\n",
+       "7   ago-set-out 2012  7,0\n",
+       "8   set-out-nov 2012  6,8\n",
+       "9   out-nov-dez 2012  6,9\n",
+       "10  nov-dez-jan 2013  7,3\n",
+       "11  dez-jan-fev 2013  7,8\n",
+       "12  jan-fev-mar 2013  8,1\n",
+       "13  fev-mar-abr 2013  7,9\n",
+       "14  mar-abr-mai 2013  7,7\n",
+       "15  abr-mai-jun 2013  7,5\n",
+       "16  mai-jun-jul 2013  7,4\n",
+       "17  jun-jul-ago 2013  7,2\n",
+       "18  jul-ago-set 2013  7,0\n",
+       "19  ago-set-out 2013  6,8\n",
+       "20  set-out-nov 2013  6,6\n",
+       "21  out-nov-dez 2013  6,3\n",
+       "22  nov-dez-jan 2014  6,5\n",
+       "23  dez-jan-fev 2014  6,8\n",
+       "24  jan-fev-mar 2014  7,2\n",
+       "25  fev-mar-abr 2014  7,2\n",
+       "26  mar-abr-mai 2014  7,1\n",
+       "27  abr-mai-jun 2014  6,9\n",
+       "28  mai-jun-jul 2014  7,0\n",
+       "29  jun-jul-ago 2014  7,0\n",
+       "30  jul-ago-set 2014  6,9\n",
+       "31  ago-set-out 2014  6,7\n",
+       "32  set-out-nov 2014  6,6\n",
+       "33  out-nov-dez 2014  6,6"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = desemprego_2012.transpose().reset_index()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jan-fev-mar 2012\n",
+      "fev-mar-abr 2012\n",
+      "mar-abr-mai 2012\n",
+      "abr-mai-jun 2012\n",
+      "mai-jun-jul 2012\n",
+      "jun-jul-ago 2012\n",
+      "jul-ago-set 2012\n",
+      "ago-set-out 2012\n",
+      "set-out-nov 2012\n",
+      "out-nov-dez 2012\n",
+      "nov-dez-jan 2013\n",
+      "dez-jan-fev 2013\n",
+      "jan-fev-mar 2013\n",
+      "fev-mar-abr 2013\n",
+      "mar-abr-mai 2013\n",
+      "abr-mai-jun 2013\n",
+      "mai-jun-jul 2013\n",
+      "jun-jul-ago 2013\n",
+      "jul-ago-set 2013\n",
+      "ago-set-out 2013\n",
+      "set-out-nov 2013\n",
+      "out-nov-dez 2013\n",
+      "nov-dez-jan 2014\n",
+      "dez-jan-fev 2014\n",
+      "jan-fev-mar 2014\n",
+      "fev-mar-abr 2014\n",
+      "mar-abr-mai 2014\n",
+      "abr-mai-jun 2014\n",
+      "mai-jun-jul 2014\n",
+      "jun-jul-ago 2014\n",
+      "jul-ago-set 2014\n",
+      "ago-set-out 2014\n",
+      "set-out-nov 2014\n",
+      "out-nov-dez 2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "for header,columns in df.items():\n",
+    "    if header == 'index':\n",
+    "        j = 0\n",
+    "        #print(columns)\n",
+    "        for i in columns:\n",
+    "            print(i)\n",
+    "            mes = i[:3]\n",
+    "            ano = i[-4:]\n",
+    "            if mes == 'jan':\n",
+    "                mes = 1\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'fev':\n",
+    "                mes = 2\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'mar':\n",
+    "                mes = 3\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'abr':\n",
+    "                mes = 4\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'mai':\n",
+    "                mes = 5\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'jun':\n",
+    "                mes = 6\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'jul':\n",
+    "                mes = 7\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'ago':\n",
+    "                mes = 8\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'set':\n",
+    "                mes = 9\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'out':\n",
+    "                mes = 10\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'nov':\n",
+    "                mes = 11\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            elif mes == 'dez':\n",
+    "                mes = 12\n",
+    "                df['index'].iloc[j] = f'{mes}-{ano}'\n",
+    "            j += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1-2012</td>\n",
+       "      <td>8,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2-2012</td>\n",
+       "      <td>7,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3-2012</td>\n",
+       "      <td>7,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4-2012</td>\n",
+       "      <td>7,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5-2012</td>\n",
+       "      <td>7,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6-2012</td>\n",
+       "      <td>7,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7-2012</td>\n",
+       "      <td>7,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8-2012</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9-2012</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10-2012</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11-2013</td>\n",
+       "      <td>7,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12-2013</td>\n",
+       "      <td>7,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1-2013</td>\n",
+       "      <td>8,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2-2013</td>\n",
+       "      <td>7,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3-2013</td>\n",
+       "      <td>7,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>4-2013</td>\n",
+       "      <td>7,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5-2013</td>\n",
+       "      <td>7,4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>6-2013</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>7-2013</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>8-2013</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>9-2013</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>10-2013</td>\n",
+       "      <td>6,3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>11-2014</td>\n",
+       "      <td>6,5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>12-2014</td>\n",
+       "      <td>6,8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1-2014</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2-2014</td>\n",
+       "      <td>7,2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3-2014</td>\n",
+       "      <td>7,1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>4-2014</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5-2014</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>6-2014</td>\n",
+       "      <td>7,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>7-2014</td>\n",
+       "      <td>6,9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>8-2014</td>\n",
+       "      <td>6,7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>9-2014</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>10-2014</td>\n",
+       "      <td>6,6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index    %\n",
+       "0    1-2012  8,0\n",
+       "1    2-2012  7,8\n",
+       "2    3-2012  7,7\n",
+       "3    4-2012  7,6\n",
+       "4    5-2012  7,5\n",
+       "5    6-2012  7,4\n",
+       "6    7-2012  7,1\n",
+       "7    8-2012  7,0\n",
+       "8    9-2012  6,8\n",
+       "9   10-2012  6,9\n",
+       "10  11-2013  7,3\n",
+       "11  12-2013  7,8\n",
+       "12   1-2013  8,1\n",
+       "13   2-2013  7,9\n",
+       "14   3-2013  7,7\n",
+       "15   4-2013  7,5\n",
+       "16   5-2013  7,4\n",
+       "17   6-2013  7,2\n",
+       "18   7-2013  7,0\n",
+       "19   8-2013  6,8\n",
+       "20   9-2013  6,6\n",
+       "21  10-2013  6,3\n",
+       "22  11-2014  6,5\n",
+       "23  12-2014  6,8\n",
+       "24   1-2014  7,2\n",
+       "25   2-2014  7,2\n",
+       "26   3-2014  7,1\n",
+       "27   4-2014  6,9\n",
+       "28   5-2014  7,0\n",
+       "29   6-2014  7,0\n",
+       "30   7-2014  6,9\n",
+       "31   8-2014  6,7\n",
+       "32   9-2014  6,6\n",
+       "33  10-2014  6,6"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
