--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
        "[153876 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2467,7 @@
        "[1 rows x 139 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
        "[23028 rows x 4 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2819,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3060,7 @@
        "33  10-2014  6,6"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3071,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3080,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3089,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -3250,7 +3250,7 @@
        "[23028 rows x 5 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3270,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3412,7 @@
        "[23028 rows x 5 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3432,7 +3432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3440,8 +3440,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Df geral criado!\n",
+    "\n",
+    "### Entretanto, ele tem apenas 1 feature, devemos preenchê-lo com as outras e garantir que os objetos sejam todos integers, ao trocar ',' por '.'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def substitui(df, coluna):\n",
+    "    for header,columns in df.items():\n",
+    "        j = 0\n",
+    "        if header == coluna:\n",
+    "            for i in columns:\n",
+    "                n = i.replace(',','.')\n",
+    "                df['%'].iloc[j] = n\n",
+    "                j += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "substitui(df, coluna='%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -3475,238 +3509,238 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1-2012</td>\n",
-       "      <td>8,0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2-2012</td>\n",
-       "      <td>7,8</td>\n",
+       "      <td>7.8</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3-2012</td>\n",
-       "      <td>7,7</td>\n",
+       "      <td>7.7</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4-2012</td>\n",
-       "      <td>7,6</td>\n",
+       "      <td>7.6</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5-2012</td>\n",
-       "      <td>7,5</td>\n",
+       "      <td>7.5</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6-2012</td>\n",
-       "      <td>7,4</td>\n",
+       "      <td>7.4</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7-2012</td>\n",
-       "      <td>7,1</td>\n",
+       "      <td>7.1</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8-2012</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9-2012</td>\n",
-       "      <td>6,8</td>\n",
+       "      <td>6.8</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10-2012</td>\n",
-       "      <td>6,9</td>\n",
+       "      <td>6.9</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>11-2012</td>\n",
-       "      <td>7,3</td>\n",
+       "      <td>7.3</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>12-2012</td>\n",
-       "      <td>7,8</td>\n",
+       "      <td>7.8</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>1-2013</td>\n",
-       "      <td>8,1</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2-2013</td>\n",
-       "      <td>7,9</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>3-2013</td>\n",
-       "      <td>7,7</td>\n",
+       "      <td>7.7</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>4-2013</td>\n",
-       "      <td>7,5</td>\n",
+       "      <td>7.5</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>5-2013</td>\n",
-       "      <td>7,4</td>\n",
+       "      <td>7.4</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>6-2013</td>\n",
-       "      <td>7,2</td>\n",
+       "      <td>7.2</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>7-2013</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>8-2013</td>\n",
-       "      <td>6,8</td>\n",
+       "      <td>6.8</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>9-2013</td>\n",
-       "      <td>6,6</td>\n",
+       "      <td>6.6</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>10-2013</td>\n",
-       "      <td>6,3</td>\n",
+       "      <td>6.3</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>11-2013</td>\n",
-       "      <td>6,5</td>\n",
+       "      <td>6.5</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>12-2013</td>\n",
-       "      <td>6,8</td>\n",
+       "      <td>6.8</td>\n",
        "      <td>Campinas</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>1-2014</td>\n",
-       "      <td>7,2</td>\n",
+       "      <td>7.2</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>2-2014</td>\n",
-       "      <td>7,2</td>\n",
+       "      <td>7.2</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>3-2014</td>\n",
-       "      <td>7,1</td>\n",
+       "      <td>7.1</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>4-2014</td>\n",
-       "      <td>6,9</td>\n",
+       "      <td>6.9</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>5-2014</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>6-2014</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>7-2014</td>\n",
-       "      <td>6,9</td>\n",
+       "      <td>6.9</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>8-2014</td>\n",
-       "      <td>6,7</td>\n",
+       "      <td>6.7</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>9-2014</td>\n",
-       "      <td>6,6</td>\n",
+       "      <td>6.6</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>10-2014</td>\n",
-       "      <td>6,6</td>\n",
+       "      <td>6.6</td>\n",
        "      <td>Araçatuba</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -3716,49 +3750,56 @@
       ],
       "text/plain": [
        "   index_datas    %           regiao_ssp  Homicidio_total\n",
-       "0       1-2012  8,0  Presidente Prudente              0.0\n",
-       "1       2-2012  7,8  Presidente Prudente              0.0\n",
-       "2       3-2012  7,7  Presidente Prudente              0.0\n",
-       "3       4-2012  7,6  Presidente Prudente              0.0\n",
-       "4       5-2012  7,5  Presidente Prudente              0.0\n",
-       "5       6-2012  7,4  Presidente Prudente              0.0\n",
-       "6       7-2012  7,1  Presidente Prudente              0.0\n",
-       "7       8-2012  7,0  Presidente Prudente              0.0\n",
-       "8       9-2012  6,8  Presidente Prudente              0.0\n",
-       "9      10-2012  6,9  Presidente Prudente              0.0\n",
-       "10     11-2012  7,3  Presidente Prudente              0.0\n",
-       "11     12-2012  7,8  Presidente Prudente              0.0\n",
-       "12      1-2013  8,1             Campinas              1.0\n",
-       "13      2-2013  7,9             Campinas              0.0\n",
-       "14      3-2013  7,7             Campinas              1.0\n",
-       "15      4-2013  7,5             Campinas              0.0\n",
-       "16      5-2013  7,4             Campinas              0.0\n",
-       "17      6-2013  7,2             Campinas              0.0\n",
-       "18      7-2013  7,0             Campinas              0.0\n",
-       "19      8-2013  6,8             Campinas              0.0\n",
-       "20      9-2013  6,6             Campinas              1.0\n",
-       "21     10-2013  6,3             Campinas              1.0\n",
-       "22     11-2013  6,5             Campinas              1.0\n",
-       "23     12-2013  6,8             Campinas              2.0\n",
-       "24      1-2014  7,2            Araçatuba              0.0\n",
-       "25      2-2014  7,2            Araçatuba              0.0\n",
-       "26      3-2014  7,1            Araçatuba              0.0\n",
-       "27      4-2014  6,9            Araçatuba              0.0\n",
-       "28      5-2014  7,0            Araçatuba              0.0\n",
-       "29      6-2014  7,0            Araçatuba              0.0\n",
-       "30      7-2014  6,9            Araçatuba              0.0\n",
-       "31      8-2014  6,7            Araçatuba              0.0\n",
-       "32      9-2014  6,6            Araçatuba              0.0\n",
-       "33     10-2014  6,6            Araçatuba              0.0"
+       "0       1-2012  8.0  Presidente Prudente              0.0\n",
+       "1       2-2012  7.8  Presidente Prudente              0.0\n",
+       "2       3-2012  7.7  Presidente Prudente              0.0\n",
+       "3       4-2012  7.6  Presidente Prudente              0.0\n",
+       "4       5-2012  7.5  Presidente Prudente              0.0\n",
+       "5       6-2012  7.4  Presidente Prudente              0.0\n",
+       "6       7-2012  7.1  Presidente Prudente              0.0\n",
+       "7       8-2012  7.0  Presidente Prudente              0.0\n",
+       "8       9-2012  6.8  Presidente Prudente              0.0\n",
+       "9      10-2012  6.9  Presidente Prudente              0.0\n",
+       "10     11-2012  7.3  Presidente Prudente              0.0\n",
+       "11     12-2012  7.8  Presidente Prudente              0.0\n",
+       "12      1-2013  8.1             Campinas              1.0\n",
+       "13      2-2013  7.9             Campinas              0.0\n",
+       "14      3-2013  7.7             Campinas              1.0\n",
+       "15      4-2013  7.5             Campinas              0.0\n",
+       "16      5-2013  7.4             Campinas              0.0\n",
+       "17      6-2013  7.2             Campinas              0.0\n",
+       "18      7-2013  7.0             Campinas              0.0\n",
+       "19      8-2013  6.8             Campinas              0.0\n",
+       "20      9-2013  6.6             Campinas              1.0\n",
+       "21     10-2013  6.3             Campinas              1.0\n",
+       "22     11-2013  6.5             Campinas              1.0\n",
+       "23     12-2013  6.8             Campinas              2.0\n",
+       "24      1-2014  7.2            Araçatuba              0.0\n",
+       "25      2-2014  7.2            Araçatuba              0.0\n",
+       "26      3-2014  7.1            Araçatuba              0.0\n",
+       "27      4-2014  6.9            Araçatuba              0.0\n",
+       "28      5-2014  7.0            Araçatuba              0.0\n",
+       "29      6-2014  7.0            Araçatuba              0.0\n",
+       "30      7-2014  6.9            Araçatuba              0.0\n",
+       "31      8-2014  6.7            Araçatuba              0.0\n",
+       "32      9-2014  6.6            Araçatuba              0.0\n",
+       "33     10-2014  6.6            Araçatuba              0.0"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df #substituído !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Agora iremos adicionar as outras features!"
    ]
   },
   {
